--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ background: none;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-    font-size: 1.4em;
+    font-size: 1.7em;
     font-weight: bold;
     line-height: normal;
     margin: 17px;
@@ -289,7 +289,7 @@ background: none;
 }
 
 .header .navbar-nav > li > a {
-    padding: 25px 18px;
+    padding: 25px 8px;
     /*padding: 15px 8px;*/
     text-transform: uppercase;
 }
@@ -335,51 +335,59 @@ background: none;
 /*--- Banner ----*/
 .banner-container {
     width: 100%;
+    height: 1000px;
     position: relative;
-    padding: 80px 0px 30px 0px;
+    padding: 150px 0px;
     box-shadow: 0px 0px 0px rgba(0,0,0,0);
     /*box-shadow: 0px 0px 1px rgba(0,0,0,0.4);*/
     /*background: url("../images/banner-bg.jpg") no-repeat;*/
     /*background-size: 100% 100%;*/
     background-size: cover;
-    margin-top: 40px;
+    /*margin-top: 40px;*/
     background: #fff;
 }
 
     .banner-container > img {
-        width: 90%;
+        width: 95%;
+        padding: 120px 120px;
     }
 
 .banner-content {
     position: absolute;
-    padding: 90px 20px;
+    width: 100%;
+    height: 100%;
+    padding: 100px 5px;
     z-index: 3;
     top: 0px;
     left: 0px;
     right: 0px;
+    background: #fff;
 }
 
     .banner-content h2 {
         color: #000000;
         font-weight: normal;
         font-family: 'Source Sans Pro', sans-serif;        
-        font-size: 3.1em;
+        font-size: 3em;
         margin: 2% 0 30px;
         line-height: 1.2em;
     }
 
     .banner-content p {
-        font-size: 1.7em;
+        font-size: 1.5em;
         font-family: 'Source Sans Pro', sans-serif;        
         font-weight: normal;
         font-style: normal;
         color: #000000;
         width: 450px;
+        min-height: 150px;
     }
 
 .da-slider {
     margin: 10 auto !important;
+    padding: 30px;
 }
+
 
 .sub-heading {
     padding: 25px 0;
@@ -445,7 +453,7 @@ background: none;
 
 /*Intro Content*/
 #aboutMe {
-padding: 140px 0px;
+padding: 100px 0px;
 padding-bottom:100px;
 background:#D3D3D3;
 }
